# university

./: .gitignore  LICENSE  README.md
articles/МК-193/: МК-193, Куркчи, Заявка.docx  МК-193, Куркчи, Статья.docx
articles/Рыба/: Куркчи_статья.docx  Показатели отраслей.txt  Список проблем.txt
semestr.01/Cultorology/: Альбрехт Дюрер.docx  Массовая и Элитарная культура.docx  Массовая культура.docx  Рафаэль Санти.docx
semestr.01/English/: 17.11.docx  27.10.docx  Diffie-Hellman.pptx  MITM.pptx  Mouse.docx  Report SSD.docx
semestr.01/Informatics/: CGT.docx  GCT7.1.pas  GCT7.2.pas
semestr.02/English/: Diffie-Hellman.docx  MITM.docx  Жидилов Евгений Иванович.docx
semestr.02/Life Safety/: ~$жарная безопасность.docx  Пожарная безопасность.docx  Приложения.docx
semestr.02/Practics/: Маша.vsd  Практика Маша.docx  Практика.docx  Практика.vsd
semestr.03/Electronics/: CW.doc
semestr.03/FPaAL/: A1.vsdx  course project.docx  schedule.docx  schemes.vsdx
semestr.03/NM/: CP.docx  task.01.mcd  task.01.xmcd  task.02.xlsx  task.03.01.xlsx  task.03.02.xlsx  task.04.xlsx  task.05.xlsx  task.docx  Календарный план.docx  Курсовой проект.docx
semestr.04/.NET/: .gitignore
semestr.04/DM/: КР SQL и РА.txt
semestr.04/EMS/: .gitignore
semestr.04/OOP/: Tower Defence.docx
semestr.04/PPCT/: .gitignore  Реферат.docx  Реферат.pages  ТСПП Лекция 12.pages  ТСПП Лекция 13.pages
semestr.04/PTnMS/: .gitignore  course project.docx
semestr.05/МИО/: МИО-1.pages  МИО-2.pages  (+5 more)
semestr.05/ТРСиПВ/Lab.03/code/: CMakeLists.txt  a.txt  b.txt  main  main.cpp
semestr.06/: Реферат.docx
(+1072 files in other folders)
